[tool.poetry]
name = "flash"
version = "0.1.0-alpha.1"
description = "Flash - async port of the Dash framework"
authors = ["Christian Giessel"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/chgiesse/flash"

[tool.poetry.dependencies]
python = ">=3.8, <3.13"
dash = "^2.18.2"
Quart = "^0.19.9"
quart-compress = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
